--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="/img/87473369_3057707494263968_2651922046472159232_n.jpg" alt="img">
+          <img src="./img/87473369_3057707494263968_2651922046472159232_n.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
