--- a/index.html
+++ b/index.html
@@ -122,10 +122,8 @@
         <div class="project-item">
           <div class="project-info">
             <h1>JavaScript Projects</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h2>Weather App</h2>
+            <p>The Weather App shows the current weather of any city the user searched for and show the background image of the searched city. </p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
