--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <h1>JavaScript Projects</h1>
             <h2>Weather App</h2>
             <p>The Weather App shows the current weather of any city the user searched for and show the background image of the searched city. </p>
+            <a href="https://faiyaz619.github.io/Weather-App/"></a>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
