--- a/index.html
+++ b/index.html
@@ -54,34 +54,28 @@
     <div class="services container">
       <div class="service-top">
         <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-          voluptatum explicabo!</p>
+        <p>I am web designer and web developer</p>
       </div>
       <div class="service-bottom">
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <p>I love to design and style any website you want . the website will be stylish and full interactive</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Development</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <p>I will create you a full web site app by that you can manage the website as you want. I special use Laravel for development</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Wordpress Customization</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <p>I will deloy and create a wrodpress website you want</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>SEO</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <p>I will rank your website, and boost in the rank</p>
         </div>
       </div>
     </div>
@@ -97,61 +91,57 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>Smanager</h1>
+            <h2>PSD to html / website clone</h2>
+            <p>The convert of psd to html, figma to html, website cloning</p>
+            <a href="https://smanger.netlify.app" target="_black" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/smanager.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>Tik tac toe</h1>
+            <h2>Javascript Project</h2>
+            <p>A simple javascript game </p>
+              <a href="https://faiyaz619.github.io/Tic-Tac-Toe/" target="_black" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/tic-tac-toe.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>JavaScript Projects</h1>
-            <h2>Weather App</h2>
+            <h1> Weather App </h1>
+            <h2> JavaScript Projects</h2>
             <p>The Weather App shows the current weather of any city the user searched for and show the background image of the searched city. </p>
             <a href="https://faiyaz619.github.io/Weather-App/" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/Weather-App.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 4</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>Convert PSD to HTML</h1>
+            <h2>Web designing</h2>
+            <p>The site is convert to html,CSS,Boostrap,Javascript</p>
+            <a href="https://beates.netlify.app" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/beats.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 5</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>Student Student-teacher-management-system</h1>
+            <h2>Laravel project</h2>
+            <p>The site is built where student can login or register in the website. They can enroll in the courses and teacher are able to create coureses and manage course and there is a admin panel where all the things can be managed from there</p>
+            <a href="https://github.com/faiyaz619/Student-teacher-management-system"  target="_black" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./img/educenter.jpg" alt="img">
           </div>
         </div>
       </div>
@@ -169,13 +159,9 @@
       </div>
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
-        <h2>Front End Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
-        <a href="#" class="cta">Download Resume</a>
+        <h2>Front End Developer/ Full stack developer</h2>
+        <p>Designing and creative designing is a difference , i will create creative design that imagination becomes reality and deloying in the server to see the piece of  imagination you dreamt of. </p>
+        <a href="resume.html" target="_blank" class="cta">Resume</a>
       </div>
     </div>
   </section>
@@ -193,14 +179,14 @@
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>+8801938692282</h2>
-            <h2>+8801938692282</h2>
+            <h2>+8801308495369</h2>
           </div>
         </div>
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
           <div class="contact-info">
             <h1>Email</h1>
-            <h2>faiyaz.fahim.ff@gmail.com</h2>
+            <h2>dev.faiyazfahim@gmail.com</h2>
             <h2>faiyaz.fahim.ff@gmail.com</h2>
           </div>
         </div>
@@ -237,7 +223,7 @@
           <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
         </div>
       </div>
-      <p>Copyright © 2021 Faiyaz. All rights reserved</p>
+      <p>Copyright &copy; Faiyaz Fahim. All rights reserved.</p>
     </div>
   </section>
   <!-- End Footer -->
