--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h1>Smanager</h1>
             <h2>PSD to html / website clone</h2>
             <p>The convert of psd to html, figma to html, website cloning</p>
-            <a href="https://smanger.netlify.app" target="_black" style="font-size:20px; color:white; list-style:none">Project Demo</a>
+            <a href="https://smanger.netlify.app" target="_blank" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
             <img src="./img/smanager.jpg" alt="img">
@@ -105,7 +105,7 @@
             <h1>Tik tac toe</h1>
             <h2>Javascript Project</h2>
             <p>A simple javascript game </p>
-              <a href="https://faiyaz619.github.io/Tic-Tac-Toe/" target="_black" style="font-size:20px; color:white; list-style:none">Project Demo</a>
+              <a href="https://faiyaz619.github.io/Tic-Tac-Toe/" target="_blank" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
             <img src="./img/tic-tac-toe.jpg" alt="img">
@@ -116,7 +116,7 @@
             <h1> Weather App </h1>
             <h2> JavaScript Projects</h2>
             <p>The Weather App shows the current weather of any city the user searched for and show the background image of the searched city. </p>
-            <a href="https://faiyaz619.github.io/Weather-App/" style="font-size:20px; color:white; list-style:none">Project Demo</a>
+            <a href="https://faiyaz619.github.io/Weather-App/" target="_blank" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
             <img src="./img/Weather-App.jpg" alt="img">
@@ -127,7 +127,7 @@
             <h1>Convert PSD to HTML</h1>
             <h2>Web designing</h2>
             <p>The site is convert to html,CSS,Boostrap,Javascript</p>
-            <a href="https://beates.netlify.app" style="font-size:20px; color:white; list-style:none">Project Demo</a>
+            <a href="https://beates.netlify.app" target="_blank" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
             <img src="./img/beats.jpg" alt="img">
@@ -138,7 +138,7 @@
             <h1>Student Student-teacher-management-system</h1>
             <h2>Laravel project</h2>
             <p>The site is built where student can login or register in the website. They can enroll in the courses and teacher are able to create coureses and manage course and there is a admin panel where all the things can be managed from there</p>
-            <a href="https://github.com/faiyaz619/Student-teacher-management-system"  target="_black" style="font-size:20px; color:white; list-style:none">Project Demo</a>
+            <a href="https://github.com/faiyaz619/Student-teacher-management-system"  target="_blank" style="font-size:20px; color:white; list-style:none">Project Demo</a>
           </div>
           <div class="project-img">
             <img src="./img/educenter.jpg" alt="img">
